[gd_scene load_steps=56 format=2]

[ext_resource path="res://e_piano_accord01 - Salin.ogg" type="AudioStream" id=1]
[ext_resource path="res://Q.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="InputEventKey" id=1]
scancode = 81

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 87

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 69

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 82

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 84

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=11]
scancode = 89

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=13]
scancode = 85

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="InputEventKey" id=15]
scancode = 73

[sub_resource type="ShortCut" id=16]
shortcut = SubResource( 15 )

[sub_resource type="InputEventKey" id=17]
scancode = 79

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 17 )

[sub_resource type="InputEventKey" id=19]
scancode = 80

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 19 )

[sub_resource type="InputEventKey" id=21]
scancode = 65

[sub_resource type="ShortCut" id=22]
shortcut = SubResource( 21 )

[sub_resource type="InputEventKey" id=23]
scancode = 83

[sub_resource type="ShortCut" id=24]
shortcut = SubResource( 23 )

[sub_resource type="InputEventKey" id=25]
scancode = 68

[sub_resource type="ShortCut" id=26]
shortcut = SubResource( 25 )

[sub_resource type="InputEventKey" id=27]
scancode = 70

[sub_resource type="ShortCut" id=28]
shortcut = SubResource( 27 )

[sub_resource type="InputEventKey" id=29]
scancode = 71

[sub_resource type="ShortCut" id=30]
shortcut = SubResource( 29 )

[sub_resource type="InputEventKey" id=31]
scancode = 72

[sub_resource type="ShortCut" id=32]
shortcut = SubResource( 31 )

[sub_resource type="InputEventKey" id=33]
scancode = 74

[sub_resource type="ShortCut" id=34]
shortcut = SubResource( 33 )

[sub_resource type="InputEventKey" id=35]
scancode = 75

[sub_resource type="ShortCut" id=36]
shortcut = SubResource( 35 )

[sub_resource type="InputEventKey" id=37]
scancode = 76

[sub_resource type="ShortCut" id=38]
shortcut = SubResource( 37 )

[sub_resource type="InputEventKey" id=39]
scancode = 90

[sub_resource type="ShortCut" id=40]
shortcut = SubResource( 39 )

[sub_resource type="InputEventKey" id=41]
scancode = 88

[sub_resource type="ShortCut" id=42]
shortcut = SubResource( 41 )

[sub_resource type="InputEventKey" id=43]
scancode = 67

[sub_resource type="ShortCut" id=44]
shortcut = SubResource( 43 )

[sub_resource type="InputEventKey" id=45]
scancode = 86

[sub_resource type="ShortCut" id=46]
shortcut = SubResource( 45 )

[sub_resource type="InputEventKey" id=47]
scancode = 66

[sub_resource type="ShortCut" id=48]
shortcut = SubResource( 47 )

[sub_resource type="InputEventKey" id=49]
scancode = 78

[sub_resource type="ShortCut" id=50]
shortcut = SubResource( 49 )

[sub_resource type="InputEventKey" id=51]
scancode = 77

[sub_resource type="ShortCut" id=52]
shortcut = SubResource( 51 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="GridContainer" type="VBoxContainer" parent="."]
margin_top = 227.0
margin_right = 530.295
margin_bottom = 827.0
rect_scale = Vector2( 1.9312, 1.9312 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
margin_right = 530.0
margin_bottom = 20.0
alignment = 1

[node name="Q" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 143.0
margin_right = 166.0
margin_bottom = 20.0
shortcut = SubResource( 2 )
text = "Q"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/Q"]
stream = ExtResource( 1 )

[node name="W" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 195.0
margin_bottom = 20.0
shortcut = SubResource( 4 )
text = "W"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/W"]
stream = ExtResource( 1 )
pitch_scale = 1.1

[node name="E" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 218.0
margin_bottom = 20.0
shortcut = SubResource( 6 )
text = "E"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/E"]
stream = ExtResource( 1 )
pitch_scale = 1.2

[node name="R" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 222.0
margin_right = 242.0
margin_bottom = 20.0
shortcut = SubResource( 8 )
text = "R"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/R"]
stream = ExtResource( 1 )
pitch_scale = 1.3

[node name="T" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 246.0
margin_right = 265.0
margin_bottom = 20.0
shortcut = SubResource( 10 )
text = "T"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/T"]
stream = ExtResource( 1 )
pitch_scale = 1.4

[node name="Y" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 269.0
margin_right = 288.0
margin_bottom = 20.0
shortcut = SubResource( 12 )
text = "Y"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/Y"]
stream = ExtResource( 1 )
pitch_scale = 1.5

[node name="U" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 314.0
margin_bottom = 20.0
shortcut = SubResource( 14 )
text = "U"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/U"]
stream = ExtResource( 1 )
pitch_scale = 1.6

[node name="I" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 335.0
margin_bottom = 20.0
shortcut = SubResource( 16 )
text = "I"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/I"]
stream = ExtResource( 1 )
pitch_scale = 1.7

[node name="O" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 339.0
margin_right = 362.0
margin_bottom = 20.0
shortcut = SubResource( 18 )
text = "O"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/O"]
stream = ExtResource( 1 )
pitch_scale = 1.8

[node name="P" type="Button" parent="GridContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 386.0
margin_bottom = 20.0
shortcut = SubResource( 20 )
text = "P"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer/P"]
stream = ExtResource( 1 )
pitch_scale = 1.9

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
margin_top = 24.0
margin_right = 530.0
margin_bottom = 44.0
alignment = 1

[node name="A" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 159.0
margin_right = 180.0
margin_bottom = 20.0
shortcut = SubResource( 22 )
text = "A"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/A"]
stream = ExtResource( 1 )
pitch_scale = 2.0

[node name="S" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 184.0
margin_right = 203.0
margin_bottom = 20.0
shortcut = SubResource( 24 )
text = "S"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/S"]
stream = ExtResource( 1 )
pitch_scale = 2.1

[node name="D" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 207.0
margin_right = 229.0
margin_bottom = 20.0
shortcut = SubResource( 26 )
text = "D"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/D"]
stream = ExtResource( 1 )
pitch_scale = 2.2

[node name="F" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 233.0
margin_right = 252.0
margin_bottom = 20.0
shortcut = SubResource( 28 )
text = "F"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/F"]
stream = ExtResource( 1 )
pitch_scale = 2.3

[node name="G" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 256.0
margin_right = 278.0
margin_bottom = 20.0
shortcut = SubResource( 30 )
text = "G"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/G"]
stream = ExtResource( 1 )
pitch_scale = 2.4

[node name="H" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 282.0
margin_right = 304.0
margin_bottom = 20.0
shortcut = SubResource( 32 )
text = "H"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/H"]
stream = ExtResource( 1 )
pitch_scale = 2.5

[node name="J" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 308.0
margin_right = 323.0
margin_bottom = 20.0
shortcut = SubResource( 34 )
text = "J"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/J"]
stream = ExtResource( 1 )
pitch_scale = 2.6

[node name="K" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 327.0
margin_right = 347.0
margin_bottom = 20.0
shortcut = SubResource( 36 )
text = "K"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/K"]
stream = ExtResource( 1 )
pitch_scale = 2.7

[node name="L" type="Button" parent="GridContainer/HBoxContainer2"]
margin_left = 351.0
margin_right = 370.0
margin_bottom = 20.0
shortcut = SubResource( 38 )
text = "L"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer2/L"]
stream = ExtResource( 1 )
pitch_scale = 2.8

[node name="HBoxContainer3" type="HBoxContainer" parent="GridContainer"]
margin_top = 48.0
margin_right = 530.0
margin_bottom = 68.0
alignment = 1

[node name="Z" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 179.0
margin_right = 199.0
margin_bottom = 20.0
shortcut = SubResource( 40 )
text = "Z"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/Z"]
stream = ExtResource( 1 )
pitch_scale = 2.9

[node name="X" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 203.0
margin_right = 223.0
margin_bottom = 20.0
shortcut = SubResource( 42 )
text = "X"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/X"]
stream = ExtResource( 1 )
pitch_scale = 3.0

[node name="C" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 227.0
margin_right = 247.0
margin_bottom = 20.0
shortcut = SubResource( 44 )
text = "C"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/C"]
stream = ExtResource( 1 )
pitch_scale = 3.1

[node name="V" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 251.0
margin_right = 271.0
margin_bottom = 20.0
shortcut = SubResource( 46 )
text = "V"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/V"]
stream = ExtResource( 1 )
pitch_scale = 3.2

[node name="B" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 275.0
margin_right = 296.0
margin_bottom = 20.0
shortcut = SubResource( 48 )
text = "B"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/B"]
stream = ExtResource( 1 )
pitch_scale = 3.3

[node name="N" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 300.0
margin_right = 322.0
margin_bottom = 20.0
shortcut = SubResource( 50 )
text = "N"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/N"]
stream = ExtResource( 1 )
pitch_scale = 3.4

[node name="M" type="Button" parent="GridContainer/HBoxContainer3"]
margin_left = 326.0
margin_right = 350.0
margin_bottom = 20.0
shortcut = SubResource( 52 )
text = "M"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/HBoxContainer3/M"]
stream = ExtResource( 1 )
pitch_scale = 3.5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 97.0
margin_bottom = 508.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master Volume" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 97.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="VBoxContainer/Master Volume"]
margin_right = 97.0
margin_bottom = 14.0
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Master Volume"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
min_value = -80.0
max_value = 24.0
step = 0.1

[node name="Pitch" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 97.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pitch" type="Label" parent="VBoxContainer/Pitch"]
margin_right = 97.0
margin_bottom = 14.0
text = "Pitch Scale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Pitch"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
min_value = -5.0
max_value = 5.0
step = 0.1

[node name="Pan" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 97.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pan" type="Label" parent="VBoxContainer/Pan"]
margin_right = 97.0
margin_bottom = 14.0
text = "Pan"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Pan"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="Reverb" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 97.0
margin_bottom = 138.0

[node name="Reverb" type="Label" parent="VBoxContainer/Reverb"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reverb"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Reverb"]
margin_left = 48.0
margin_right = 72.0
margin_bottom = 24.0

[node name="Room Size" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 97.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Room Size"]
margin_right = 97.0
margin_bottom = 14.0
text = "Room Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Room Size"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="Damping" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 97.0
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Damping"]
margin_right = 97.0
margin_bottom = 14.0
text = "Damping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Damping"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Spread" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 97.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Spread"]
margin_right = 97.0
margin_bottom = 14.0
text = "Spread"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Spread"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Hipass" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 97.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Hipass"]
margin_right = 97.0
margin_bottom = 14.0
text = "Hipass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Hipass"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01

[node name="Dry" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 294.0
margin_right = 97.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Dry"]
margin_right = 97.0
margin_bottom = 14.0
text = "Dry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Dry"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Wet" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 97.0
margin_bottom = 366.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Wet"]
margin_right = 97.0
margin_bottom = 14.0
text = "Wet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/Wet"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Chorus" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 370.0
margin_right = 97.0
margin_bottom = 394.0

[node name="Chorus" type="Label" parent="VBoxContainer/Chorus"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Chorus"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Chorus"]
margin_left = 48.0
margin_right = 72.0
margin_bottom = 24.0

[node name="VoiceCount" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 398.0
margin_right = 97.0
margin_bottom = 432.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/VoiceCount"]
margin_right = 97.0
margin_bottom = 14.0
text = "Voice Count"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/VoiceCount"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
min_value = 1.0
max_value = 4.0
value = 2.0

[node name="ChDry" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 436.0
margin_right = 97.0
margin_bottom = 470.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ChDry"]
margin_right = 97.0
margin_bottom = 14.0
text = "Dry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/ChDry"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="ChWet" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 474.0
margin_right = 97.0
margin_bottom = 508.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ChWet"]
margin_right = 97.0
margin_bottom = 14.0
text = "Wet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/ChWet"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 0.5
[connection signal="button_down" from="GridContainer/HBoxContainer/Q" to="GridContainer/HBoxContainer/Q" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/W" to="GridContainer/HBoxContainer/W" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/E" to="GridContainer/HBoxContainer/E" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/R" to="GridContainer/HBoxContainer/R" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/T" to="GridContainer/HBoxContainer/T" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/Y" to="GridContainer/HBoxContainer/Y" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/U" to="GridContainer/HBoxContainer/U" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/I" to="GridContainer/HBoxContainer/I" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/O" to="GridContainer/HBoxContainer/O" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer/P" to="GridContainer/HBoxContainer/P" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/A" to="GridContainer/HBoxContainer2/A" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/S" to="GridContainer/HBoxContainer2/S" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/D" to="GridContainer/HBoxContainer2/D" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/F" to="GridContainer/HBoxContainer2/F" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/G" to="GridContainer/HBoxContainer2/G" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/H" to="GridContainer/HBoxContainer2/H" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/J" to="GridContainer/HBoxContainer2/J" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/K" to="GridContainer/HBoxContainer2/K" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer2/L" to="GridContainer/HBoxContainer2/L" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/Z" to="GridContainer/HBoxContainer3/Z" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/X" to="GridContainer/HBoxContainer3/X" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/C" to="GridContainer/HBoxContainer3/C" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/V" to="GridContainer/HBoxContainer3/V" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/B" to="GridContainer/HBoxContainer3/B" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/N" to="GridContainer/HBoxContainer3/N" method="_on_Q_button_down"]
[connection signal="button_down" from="GridContainer/HBoxContainer3/M" to="GridContainer/HBoxContainer3/M" method="_on_Q_button_down"]
